--- a/SCOMP_Project/db/SCOMP.lpc.html
+++ b/SCOMP_Project/db/SCOMP.lpc.html
@@ -161,6 +161,38 @@
 </TR>
 <TR >
 <TD >inst11</TD>
+<TD >19</TD>
+<TD >0</TD>
+<TD >12</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst15</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst14</TD>
 <TD >5</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -197,7 +229,7 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >10</TD>
+<TD >12</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
